# screenapi-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  test.py
app/: __main__.py  common.py
app/export/: cli.py
app/scrape/: __init__.py
app/setup/: utils.py
app/txt/: cli.py  deprecated_cli.py
app/update/: main.py
app/xlsx/: main.py
