[tool.poetry]
name = "screenapi-cli"
version = "0.1.5a"
description = "A cli interface to interact with screenapi"
authors = ["RONY <iamrony777@pm.me>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "app" },
]

[project.urls]
homepage = "https://ffstudios.io"
repository = "https://github.com/FutureForge-Studios/screenapi-cli.git"

[tool.poetry.scripts]
screenapi-cli = "app.__main__:app"
sapi = "app.__main__:app"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
httpx = {extras = ["http2"], version = "^0.27.0"}
typer = {extras = ["all"], version = "^0.10.0"}
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
